feat: add missing invoice flows for client actions
- Add approve/reject cancellation endpoints
- Add confirm/reject payment endpoints
- Add public invoice view endpoint
- Add email notifications for all actions
- Update InvoiceService with new methods
- Create PublicInvoiceResponse DTO
- Add VIEW token generation for invoice emails
- Resend invoice email on rejection with custom subject